# rp2350-pico-sdk-base-proj

./: .clangd  CMakeLists.txt  CMakePresets.json  main.cpp  readme.md
